# gemm-learn

./: .gitignore  CMakeLists.txt  CMakePresets.json  Note.md  README.md  Untitled-1.bat  build.bat  notes.md  run.bat  run.sh
include/: common.h  common_utils.h  gemm.h  gemm_kernel.h  gemm_utils.h  kernel.h  matrixmanager.h  test_utils.h
pybind11/: gemm.cpp
python/: test2.py
src/: 01-naive.cu  02-cublas.cu  03-opt1.cu  04-opt2-basic-block.cu  05-opt3-prefetch-pipeline.cu  bench_large.cu  gemm.cu  main.cpp  main.cu  naive_gemm.cu
src/kernel/: 00-cutlass_sgemm.cu  01-naive_gemm.cu  02-shared_mem_naive.cu  03-warptile.cu
